--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,19 @@
 # main links links
 main:
+  - title: "Homepage"
+    url: /
+
+  - title: "About Me"
+    url: /#About Me 
+  
+  - title: "Education"
+    url: /#Education 
+
   - title: "Publications"
-    url: /#publications  
+    url: /#Publications  
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /#Teaching    
+  
+  - title: "Honors and Awards"
+    url: /#Honors and Awards   
