--- a/_config.yml
+++ b/_config.yml
@@ -109,9 +109,9 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "USTC_MengTong"
+  twitter          : "mengtong0110"
   vine             :
-  weibo            : "USTC_Meng_Tong"
+  weibo            : "mengtong0110"
   xing             :
   youtube          :
   wikipedia        :
